# CoDesk

./: .gitignore  README.md  pyproject.toml
docs/: 2026-04-18-bootstrap-milestone-summary.md
docs/plans/: 2026-04-18-codesk-bootstrap-implementation-plan.md  codesk-mvp.md  codesk-product-design-spec.md
src/codesk/: __init__.py  agents.py  bootstrap.py  cli.py  config.py  digest.py  indexing.py  prompts.py  sync_packet.py  templates.py  validation.py  workspace.py
tests/: __init__.py  test_agents.py  test_cli_init.py  test_config.py  test_digest.py  test_indexing.py  test_prompts.py  test_setup.py  test_workspace.py
